--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <main>
     <article>
       <h1>Mulheres incríveis que mudaram a maneira como usamos a tecnologia</h1>
+  <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BYcJLACz2pY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+
       <p>As mulheres estão envolvidas com a tecnologia há séculos, mas muitas vezes suas contribuições permanecem não reconhecidas. De Ada Lovelace a Grace Hopper, de Hedy Lamarr a Margaret Hamilton, essas mulheres mudaram a forma como usamos a tecnologia hoje. Continue lendo para saber mais sobre suas histórias inspiradoras e celebre as incríveis mulheres da tecnologia que moldaram nosso cenário tecnológico!</p>
       <h2>Ada Lovelace 💻</h2>
       <p>Nascida em 1815, Ada Lovelace foi educada em casa por sua mãe, que insistia que ela aprendesse ciências e matemática. Apesar de ser uma escritora inglesa, Ada é conhecida por ser a primeira programadora devido às suas notas escritas explicando como a noção de um motor poderia fazer a transição do cálculo para a computação. Ela é uma das mulheres mais famosas da tecnologia e é até considerada a “Profeta da Era da Computação”. Toda segunda terça-feira de outubro é conhecida como Ada Lovelace Day, para celebrar as conquistas das mulheres nas carreiras STEM.
